syntax = "proto3";

package agent.v1;

option go_package = "github.com/forge/platform/gen/agent/v1;agentv1";

import "agent/v1/messages.proto";

// AgentService is exposed by each agent container.
// The platform connects to agents as a client.
service AgentService {
  // Connect establishes a bidirectional stream for real-time communication.
  // Platform sends commands, agent sends messages back.
  rpc Connect(stream AgentCommand) returns (stream AgentEvent);

  // GetStatus returns the current agent status (unary RPC for simple queries).
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);

  // CatchUp retrieves messages since a given sequence number.
  // Used for reconnection scenarios.
  rpc CatchUp(CatchUpRequest) returns (CatchUpResponse);

  // Shutdown gracefully terminates the agent.
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

// Commands sent from platform to agent
message AgentCommand {
  string request_id = 1;

  oneof command {
    SendMessageCommand send_message = 10;
    InterruptCommand interrupt = 11;
    SetPermissionModeCommand set_permission_mode = 12;
    SetModelCommand set_model = 13;
  }
}

message SendMessageCommand {
  string content = 1;
  repeated Attachment attachments = 2;
}

message Attachment {
  string filename = 1;
  string mime_type = 2;
  bytes content = 3;
}

message InterruptCommand {}

message SetPermissionModeCommand {
  string mode = 1; // "default", "acceptEdits", "bypassPermissions"
}

message SetModelCommand {
  string model = 1;
}

// Events sent from agent to platform
message AgentEvent {
  string request_id = 1; // Correlates to the command that triggered this event

  oneof event {
    AgentMessage message = 10;
    AckEvent ack = 11;
    ErrorEvent error = 12;
  }
}

message AckEvent {
  bool success = 1;
  string message = 2;
}

message ErrorEvent {
  string code = 1;
  string message = 2;
  bool fatal = 3; // If true, agent will terminate
}

// GetStatus
message GetStatusRequest {}

message GetStatusResponse {
  string agent_id = 1;
  string session_id = 2;
  AgentState state = 3;
  int64 latest_seq = 4;
  string current_model = 5;
  string permission_mode = 6;
  int64 uptime_ms = 7;
}

enum AgentState {
  AGENT_STATE_UNSPECIFIED = 0;
  AGENT_STATE_IDLE = 1;
  AGENT_STATE_PROCESSING = 2;
  AGENT_STATE_ERROR = 3;
}

// CatchUp
message CatchUpRequest {
  int64 from_seq = 1; // Get messages where seq > from_seq
  int32 limit = 2;    // Max messages to return (0 = no limit)
}

message CatchUpResponse {
  repeated AgentMessage messages = 1;
  int64 latest_seq = 2;
  bool has_more = 3;
}

// Shutdown
message ShutdownRequest {
  bool graceful = 1; // If true, wait for current operation to complete
}

message ShutdownResponse {
  bool success = 1;
}
