syntax = "proto3";

package agent.v1;

option go_package = "github.com/forge/platform/gen/agent/v1;agentv1";

// AgentMessage represents a message in the conversation.
// Maps closely to Claude Agent SDK's SDKMessage types.
message AgentMessage {
  string uuid = 1;
  string session_id = 2;
  int64 seq = 3;           // Monotonic sequence number for ordering
  int64 created_at = 4;    // Unix timestamp milliseconds

  oneof payload {
    UserMessage user_message = 10;
    AssistantMessage assistant_message = 11;
    SystemMessage system_message = 12;
    StreamEvent stream_event = 13;
    ResultMessage result_message = 14;
  }
}

// User input message
message UserMessage {
  string content = 1;
  repeated ContentBlock additional_content = 2; // For images, etc.
}

// Assistant response message
message AssistantMessage {
  repeated ContentBlock content = 1;
  optional string parent_tool_use_id = 2;
}

// Content block types (matches Anthropic API)
message ContentBlock {
  oneof block {
    TextBlock text = 1;
    ToolUseBlock tool_use = 2;
    ToolResultBlock tool_result = 3;
    ThinkingBlock thinking = 4;
    ImageBlock image = 5;
  }
}

message TextBlock {
  string text = 1;
}

message ToolUseBlock {
  string id = 1;
  string name = 2;
  string input_json = 3; // JSON-encoded tool input
}

message ToolResultBlock {
  string tool_use_id = 1;
  string content_json = 2; // JSON-encoded result
  bool is_error = 3;
}

message ThinkingBlock {
  string thinking = 1;
  string signature = 2; // For extended thinking
}

message ImageBlock {
  string media_type = 1;
  bytes data = 2;
}

// System messages (init, compact boundary, etc.)
message SystemMessage {
  string subtype = 1; // "init", "compact_boundary"

  // Init-specific fields
  optional string cwd = 10;
  repeated string tools = 11;
  optional string model = 12;
  optional string permission_mode = 13;

  // Compact boundary fields
  optional CompactMetadata compact_metadata = 20;
}

message CompactMetadata {
  string trigger = 1; // "manual" or "auto"
  int32 pre_tokens = 2;
}

// Streaming events (for real-time updates during generation)
message StreamEvent {
  string event_type = 1; // "content_block_start", "content_block_delta", etc.
  string event_json = 2; // JSON-encoded event data from Anthropic SDK
  optional string parent_tool_use_id = 3;
}

// Final result message
message ResultMessage {
  string subtype = 1; // "success", "error_max_turns", "error_during_execution", etc.
  bool is_error = 2;
  optional string result = 3;
  double total_cost_usd = 4;
  int32 num_turns = 5;
  int64 duration_ms = 6;
  int64 duration_api_ms = 7;
  Usage usage = 8;
  repeated string errors = 9;
}

message Usage {
  int32 input_tokens = 1;
  int32 output_tokens = 2;
  int32 cache_read_input_tokens = 3;
  int32 cache_creation_input_tokens = 4;
}
